# blue-mono-blue

./: .gitignore  Dockerfile  README.md  Taskfile.yml  hello.py  pull_request_template.md  pyproject.toml  requirements.txt  todo.md
.devcontainer/: devcontainer.json
